sandc/test/fixtures/astRegression/shouldFail/productions/ifInlineTypeGuard/EmptyElseBody.sand
pub class EmptyElseBody {
    foo() {
        (
            if let inline a = b() {
                c()
            } else {
                
            }
        )
    }
}